--- a/style.css
+++ b/style.css
@@ -1,9 +1,29 @@
 img {
-  width: 300px;
+  width: 200px;
 }
 .homesection {
   display: flex;
 }
+.products-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .hidden {
   display: none;
+}
+.surrounding-div {
+  width: 300px;
+
+  border: black solid 1px;
+}
+.category-container ul {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .category-container ul {
+    display: flex;
+    justify-content: space-around;
+  }
 }
