--- a/style.css
+++ b/style.css
@@ -1,24 +1,101 @@
-body {
-  min-height: 100vh;
+/* resets */
+body,
+ul,
+h2,
+h3,
+p,
+a {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
-img {
+/* mobile styles */
+html {
+  scroll-behavior: smooth;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  min-height: 100vh;
+  line-height: 2em;
+}
+/* header styles */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 30px;
+  background-color: #ed4c6c;
+  color: white;
+}
+/* main styles */
+.homesection img {
   width: 200px;
 }
 .homesection {
   display: flex;
+  flex-wrap: wrap;
 }
 .products-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 50px;
 }
+.category-container ul {
+  display: flex;
+  flex-direction: column;
+}
+h2 {
+  text-align: center;
+  margin: 30px 0;
+  font-size: 1.8em;
+  color: #ed4c6c;
+}
+/* scroll */
+
+/* product card styles */
+.surrounding-div {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 0;
+  padding: 20px;
+  border: lightgrey solid 1px;
+  border-radius: 5px;
+}
+.product-img {
+  max-width: 270px;
+  max-height: 250px;
+  border-radius: 20px;
+  margin: 20px;
+}
+.desc {
+  text-align: center;
+}
+.price {
+  font-weight: bold;
+  font-size: 20px;
+}
+.cart-button {
+  font-family: "Poppins", sans-serif;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  /* bgc needs to be changed */
+  background-color: lightsalmon;
+}
+.cart-button:hover {
+  background-color: #ed4c6c;
+  color: white;
+  transition: all 0.4s ease;
+}
+/* shopping cart styles */
 .hidden {
   display: none;
 }
-.shopping-cart {
-  padding: 10px;
-}
-
 .shopping-cart,
 .cash-container {
   position: fixed;
@@ -31,22 +108,28 @@ img {
 .cash-container {
   padding: 20px;
 }
+.shopping-cart {
+  padding: 10px;
+}
 .shopping-cart ul div {
   display: flex;
   justify-content: space-between;
 }
-.surrounding-div {
-  width: 300px;
-  border: black solid 1px;
-}
-.category-container ul {
-  display: flex;
-  flex-direction: column;
-}
 
+/* desktop styles */
 @media screen and (min-width: 768px) {
   .category-container ul {
-    display: flex;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .surrounding-div {
+    margin: 20px;
+  }
+  .product-img {
+    transition: transform 0.4s;
+  }
+  .product-img:hover {
+    transform: scale(1.05);
   }
 }
