--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ h2 {
   max-height: 250px;
   border-radius: 20px;
   margin: 20px;
+  z-index: -1;
 }
 .desc {
   text-align: center;
@@ -103,7 +104,7 @@ h2 {
   display: flex;
   flex-direction: column;
 }
-
+.receipt-container,
 .shopping-cart,
 .cash-container,
 .card-container {
@@ -131,6 +132,9 @@ h2 {
 
 .invalid {
   border-color: red;
+}
+.receipt-image {
+  width: 50px;
 }
 
 /* desktop styles */
