--- a/style.css
+++ b/style.css
@@ -10,14 +10,12 @@ a {
   text-decoration: none;
 }
 /* mobile styles */
-html {
-  scroll-behavior: smooth;
-}
 body {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   min-height: 100vh;
   line-height: 2em;
+  background-color: #f0e1df;
 }
 /* header styles */
 header {
@@ -65,13 +63,14 @@ h2 {
   padding: 20px;
   border: lightgrey solid 1px;
   border-radius: 5px;
+  background-color: rgb(252, 243, 249);
 }
 .product-img {
   max-width: 270px;
   max-height: 250px;
   border-radius: 20px;
   margin: 20px;
-  z-index: -1;
+  z-index: 0;
 }
 .desc {
   text-align: center;
@@ -80,19 +79,42 @@ h2 {
   font-weight: bold;
   font-size: 20px;
 }
-
-.cart-button {
+.cart-button,
+.remove-item,
+.view-receipt,
+#sendCash,
+#card-payment,
+#cash-payment {
   font-family: "Poppins", sans-serif;
   padding: 10px 20px;
   border-radius: 5px;
   border: none;
   /* bgc needs to be changed */
-  background-color: lightsalmon;
+  background-color: #ed974c;
 }
-
+.remove-item,
+.view-receipt,
+#card-payment,
+#cash-payment,
+#sendCash {
+  padding: 5px 10px;
+  margin: 5px 0;
+}
+#card-payment,
+#cash-payment {
+  margin: 50px 20px 30px 0;
+}
 .cart-button:hover {
   background-color: #ed4c6c;
   color: white;
+  transition: all 0.4s ease;
+}
+.remove-item:hover,
+.view-receipt:hover,
+#card-payment:hover,
+#cash-payment:hover,
+#sendCash:hover {
+  background-color: #f0e1df;
   transition: all 0.4s ease;
 }
 /* shopping cart styles */
@@ -114,6 +136,9 @@ h2 {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #ed4c6c;
+  z-index: +1;
+  width: 80%;
+  font-weight: 400;
 }
 .cash-container {
   padding: 20px;
@@ -129,7 +154,30 @@ h2 {
   display: flex;
   justify-content: space-between;
 }
-
+.list-item {
+  border-bottom: 1px solid black;
+  padding: 20px 0;
+}
+.close {
+  border-radius: 50%;
+  border: none;
+  height: 30px;
+  width: 30px;
+  background-color: #ed974c;
+  box-shadow: 2px 2px black;
+  margin-bottom: 10px;
+}
+.subtotal,
+.tax,
+.total {
+  font-weight: 600;
+}
+/* cash popout and card popout styles */
+input {
+  margin-left: 15px;
+  padding: 5px;
+}
+/* receipt styles */
 .invalid {
   border-color: red;
 }
@@ -152,5 +200,11 @@ h2 {
   }
   .product-img:hover {
     transform: scale(1.05);
+  }
+  .receipt-container,
+  .shopping-cart,
+  .cash-container,
+  .card-container {
+    width: 40%;
   }
 }
