--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   min-height: 100vh;
   line-height: 2em;
   background-color: #f0e1df;
+  margin-bottom: 50px;
 }
 /* header styles */
 header {
@@ -54,7 +55,7 @@ h2 {
 
 /* product card styles */
 .surrounding-div {
-  width: 300px;
+  width: 250px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -62,11 +63,12 @@ h2 {
   margin: 20px 0;
   padding: 20px;
   border: lightgrey solid 1px;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: rgb(252, 243, 249);
+  box-shadow: 10px 10px 10px 0.1px grey;
 }
 .product-img {
-  max-width: 270px;
+  max-width: 250px;
   max-height: 250px;
   border-radius: 20px;
   margin: 20px;
@@ -114,8 +116,9 @@ h2 {
 #card-payment:hover,
 #cash-payment:hover,
 #sendCash:hover {
-  background-color: #f0e1df;
+  background-color: #ed4c6c;
   transition: all 0.4s ease;
+  color: white;
 }
 /* shopping cart styles */
 .hidden {
@@ -143,6 +146,7 @@ h2 {
   height: 50vh;
   overflow-y: scroll;
   overflow-x: hidden;
+  background-color: white;
 }
 .new-div {
   display: flex;
@@ -150,18 +154,21 @@ h2 {
   border-bottom: black 1px solid;
   padding: 10px 10px;
 }
-
 .card-container label {
   display: flex;
-  justify-content: space-between;
-}
-.shopping-cart ul div {
-  display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .list-item {
+  display: flex;
+  justify-content: space-around;
   border-bottom: 1px solid black;
   padding: 20px 0;
+}
+.list-item p {
+  margin-right: 30px;
+}
+.item-name {
+  flex-grow: 1;
 }
 .close {
   border-radius: 50%;
@@ -170,7 +177,7 @@ h2 {
   width: 30px;
   background-color: #ed974c;
   box-shadow: 2px 2px black;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 .subtotal,
 .tax,
