--- a/style.css
+++ b/style.css
@@ -217,15 +217,9 @@ h2 {
   margin-top: 10px;
 }
 
-/* Cash styles */
-.cash-container input {
-  padding: 10px;
-  border-radius: 10px;
-  outline: none;
-}
-
 .quantity {
   width: 15px;
+  text-align: center;
 }
 
 .quantity-plus,
@@ -239,7 +233,25 @@ h2 {
   text-align: center;
   font-size: 15px;
   cursor: pointer;
-  margin: 0 15px;
+  margin: 0 7px;
+}
+
+.list-item p {
+  font-size: 13px;
+}
+
+.item-name {
+  margin-right: 5px;
+}
+
+/* Cash styles */
+.cash-container input {
+  padding: 10px;
+  border-radius: 10px;
+  outline: none;
+  margin-top: 10px;
+  margin-left: 0;
+  display: block;
 }
 
 #sendCash,
@@ -332,5 +344,10 @@ input {
   .cash-container,
   .card-container {
     width: 40%;
+  }
+
+  .list-item p {
+    font-size: 16px;
+    padding: 0 5px;
   }
 }
