--- a/style.css
+++ b/style.css
@@ -19,10 +19,15 @@ body {
   margin-bottom: 50px;
   font-size: 14px;
   background-image: linear-gradient(to bottom right, #a6e8f8d8, #ebfcff);
+  padding-top: 50px;
 }
 
 /* header styles */
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -30,6 +35,8 @@ header {
   background-color: #00796b;
   color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  z-index: 10;
 }
 
 #logo {
@@ -92,11 +99,6 @@ h2 {
   transition: box-shadow 0.3s, transform 0.3s;
 }
 
-.surrounding-div:hover {
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  transform: translateY(-5px);
-}
-
 .product-img {
   max-width: 200px;
   max-height: 200px;
@@ -131,6 +133,12 @@ h2 {
   color: white;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
+}
+
+.remove-item {
+  width: 70px;
+  font-size: 12px;
+  padding: 5px;
 }
 
 #card-payment,
@@ -189,8 +197,8 @@ h2 {
 
 .quantity-plus,
 .quantity-minus {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   border: none;
   background-color: #004d40;
@@ -337,6 +345,11 @@ input {
 
   .surrounding-div {
     margin: 20px;
+  }
+
+  .surrounding-div:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transform: translateY(-5px);
   }
 
   .product-img {
