--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ header {
   width: 50px;
 }
 
+i {
+  position: absolute;
+}
+
 #num-of-items {
   border-radius: 50%;
   text-align: center;
@@ -139,6 +143,7 @@ h2 {
   width: 70px;
   font-size: 12px;
   padding: 5px;
+  align-self: flex-start;
 }
 
 #card-payment,
@@ -197,8 +202,8 @@ h2 {
 
 .quantity-plus,
 .quantity-minus {
-  width: 20px;
-  height: 20px;
+  min-width: 20px;
+  min-height: 20px;
   border-radius: 50%;
   border: none;
   background-color: #004d40;
@@ -207,6 +212,7 @@ h2 {
   font-size: 15px;
   cursor: pointer;
   margin: 0 7px;
+  align-self: flex-start;
 }
 
 .list-item p {
