--- a/style.css
+++ b/style.css
@@ -204,6 +204,8 @@ h2 {
 .quantity-minus {
   min-width: 20px;
   min-height: 20px;
+  max-width: 20px;
+  max-height: 20px;
   border-radius: 50%;
   border: none;
   background-color: #004d40;
