--- a/style.css
+++ b/style.css
@@ -202,10 +202,7 @@ h2 {
 
 .quantity-plus,
 .quantity-minus {
-  min-width: 20px;
-  min-height: 20px;
-  max-width: 20px;
-  max-height: 20px;
+  width: 20px;
   border-radius: 50%;
   border: none;
   background-color: #004d40;
